<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/padding_size_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_5dp"
        android:paddingRight="@dimen/padding_5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/signature"
            android:textColor="@color/textColor"
            android:textSize="@dimen/signature_title_size"
            android:textStyle="normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_background">

            <LinearLayout
                android:id="@+id/ll_signature_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signature_canvas_view_height"
                android:orientation="vertical" />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_15"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toStartOf="@+id/buttonClear"
            app:layout_constraintStart_toStartOf="@+id/buttonClear">

            <Button
                android:id="@+id/buttonCancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="@dimen/signatureButtonTextSize"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/buttonSave"
                app:layout_constraintEnd_toStartOf="@+id/buttonSave" />

            <Button
                android:id="@+id/buttonClear"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/clear"
                android:textColor="@color/textColor"
                android:textSize="@dimen/signatureButtonTextSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonSave"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/textColor"
                android:textSize="@dimen/signatureButtonTextSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</RelativeLayout>

